--- a/vue-calendar/package.json
+++ b/vue-calendar/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@babel/core": "^7.12.16",
     "@babel/eslint-parser": "^7.12.16",
+    "@mapbox/stylelint-processor-arbitrary-tags": "^0.2.0",
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-eslint": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
@@ -29,6 +30,9 @@
     "eslint-plugin-vuejs-accessibility": "^1.1.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "stylelint": "^8.4.0",
+    "stylelint-config-recommended": "^2.1.0",
+    "vue-cli-plugin-stylelint": "~0.0.2",
     "vue-template-compiler": "^2.6.14"
   }
 }
