--- a/vue-calendar/package.json
+++ b/vue-calendar/package.json
@@ -27,8 +27,14 @@
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^5.1.0",
     "eslint-plugin-vue": "^8.0.3",
+    "postcss-html": "^1.5.0",
     "sass": "^1.32.7",
     "sass-loader": "^12.0.0",
+    "stylelint": "^14.9.1",
+    "stylelint-config-standard": "^26.0.0",
+    "stylelint-config-standard-scss": "^5.0.0",
+    "stylelint-config-standard-vue": "^1.0.0",
+    "stylelint-webpack-plugin": "^3.3.0",
     "vue-template-compiler": "^2.6.14"
   }
 }
