--- a/vue-calendar/package.json
+++ b/vue-calendar/package.json
@@ -8,8 +8,11 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@vuelidate/core": "^2.0.0-alpha.43",
+    "@vuelidate/validators": "^2.0.0-alpha.31",
     "core-js": "^3.8.3",
     "localbase": "^0.7.5",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
