--- a/vue-calendar/package.json
+++ b/vue-calendar/package.json
@@ -14,6 +14,7 @@
     "localbase": "^0.7.5",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1",
     "vuex": "^3.6.2"
   },
