--- a/vue-calendar/package.json
+++ b/vue-calendar/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
+    "localbase": "^0.7.5",
+    "uuid": "^8.3.2",
     "vue": "^2.6.14",
+    "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1",
+    "vuelidate": "^0.7.7",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
