--- a/vue-calendar/package.json
+++ b/vue-calendar/package.json
@@ -8,10 +8,14 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "localbase": "^0.7.5",
     "uuid": "^8.3.2",
     "vue": "^2.6.14",
+    "vue-axios": "^3.4.1",
+    "vue-click-outside": "^1.1.0",
+    "vue-js-modal": "^2.0.1",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1",
     "vuelidate": "^0.7.7",
