--- a/vue-calendar/package.json
+++ b/vue-calendar/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.8.3",
     "localbase": "^0.7.5",
     "uuid": "^8.3.2",
+    "v-calendar": "^2.4.1",
     "vue": "^2.6.14",
     "vue-axios": "^3.4.1",
     "vue-click-outside": "^1.1.0",
