--- a/vue-calendar/package.json
+++ b/vue-calendar/package.json
@@ -19,6 +19,7 @@
     "vue-js-modal": "^2.0.1",
     "vue-notification": "^1.3.20",
     "vue-router": "^3.5.1",
+    "vue-select": "^3.20.0",
     "vuelidate": "^0.7.7",
     "vuex": "^3.6.2"
   },
